k8s-cluster/benchmark/native/deploy/manifests/ingress/haproxy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: haproxy-ingress
  labels:
    name: haporxy-ingress
  annotations:
    kubernetes.io/ingress.class: haproxy
spec:
  rules:
  - host: benchmark.k8s.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: echoserver
            port: 
              number: 80
